cloud/w10/day-a/policies/templates/disallow-privileged.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sdisallowprivileged
spec:
  crd:
    spec:
      names:
        kind: K8sDisallowPrivileged

  targets:
    - target: admission.k8s.gatekeeper.sh
      code:
        - engine: Rego
          source:
            version: "v1"
            rego: |
              package k8sdisallowprivileged

              violation contains {"msg": msg} if {
                container := input.review.object.spec.containers[_]
                container.securityContext.privileged == true
                msg := sprintf(
                  "container %q must not run as privileged",
                  [container.name]
                )
              }

              violation contains {"msg": msg} if {
                container := input.review.object.spec.initContainers[_]
                container.securityContext.privileged == true
                msg := sprintf(
                  "initContainer %q must not run as privileged",
                  [container.name]
                )
              }
