cloud/w10/day-a/policies/templates/required-labels.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredlabels
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredLabels
      validation:
        openAPIV3Schema:
          type: object
          properties:
            labels:
              type: array
              items:
                type: string

  targets:
    - target: admission.k8s.gatekeeper.sh
      code:
        - engine: Rego
          source:
            version: "v1"
            rego: |
              package k8srequiredlabels

              violation contains {
                "msg": msg,
                "details": {"missing_labels": missing}
              } if {
                provided := {
                  label |
                  input.review.object.metadata.labels[label]
                }

                required := {
                  label |
                  label := input.parameters.labels[_]
                }

                missing := required - provided
                count(missing) > 0
                msg := sprintf("missing required labels: %v", [missing])
              }
